# chili_counting_pipeline

./: .gitignore  CMakeLists.txt  Number of clusters 22.txt  counting.cpp  statistical_removal.cpp
